--- a/indexstyle.css
+++ b/indexstyle.css
@@ -22,6 +22,13 @@
     right: 0px;
   }
 
+  #chicken{
+    background-color: #B4B38D;
+
+  }
+#sushi{
+  background-color: #68C98A;
+}
 
   .row {
     width: 100%;
